Ingress/nginx-b-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-b
  name: nginx-b
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: nginx-b
  sessionAffinity: None
  type: ClusterIP
